@@ -1,3 +1,5 @@
+  New macro REFID_ISTEXT() which is also used in ntpd/ntp_control.c.
+
 ---
 (4.2.8p11) 2018/02/27 Released by Harlan Stenn <stenn@ntp.org>
 
@@ -12,7 +14,7 @@
 * [Sec 3012] Sybil vulnerability: noepeer support.  HStenn, JPerlinger.
 * [Bug 3457] OpenSSL FIPS mode regression <perlinger@ntp.org>
 * [Bug 3455] ntpd doesn't use scope id when binding multicast <perlinger@ntp.org>
- - applied patch by Sean Haugh 
+ - applied patch by Sean Haugh
 * [Bug 3452] PARSE driver prints uninitialized memory. <perlinger@ntp.org>
 * [Bug 3450] Dubious error messages from plausibility checks in get_systime()
  - removed error log caused by rounding/slew, ensured postcondition <perlinger@ntp.org>
